v2.0.0: per-hop skills + detect-java-version router (was a single monolith)
Restructure the published plugin from one monolith SKILL.md into one skill per
LTS hop plus a router:
- detect-java-version: reads the real bytecode target across modules and dispatches
  to the right hop, or reports NOT-A-BUMP for a deliberately low-target project.
- bump-java-{8-to-11,11-to-17,17-to-21,21-to-25}: each performs one fixed hop.

Folds the latest hardening into the 21-to-25 skill: proactive Lombok (floor 1.18.46
+ maven.compiler.proc=full), Kotlin >=2.3.x + version-locked KSP (2.3.9 for 2.3.20),
multi-module per-module target via ChangePropertyValue, Gradle-9 wrapper, EasyMock bail.
Each skill is standard-tools only (JDKs, Maven/Gradle, OpenRewrite from Maven Central).

marketplace.json registers all 5 skills; README + manifests updated; major version
bump (monolith -> per-hop is a breaking restructure of the plugin layout).

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>